docs+fix(backend): SYSTEM_PROMPT 补构建与测试环境约束；NoResourceFoundException 不再返回 500
- SYSTEM_PROMPT: 新增「## 构建与测试环境约束」：裸 javac 必须加 -parameters
  （否则 @PathVariable 全 500）；Mockito 需 -Djdk.attach.allowAttachSelf=true；
  纯 Mockito 单测需 TableInfoHelper.initTableInfo 补 lambda 缓存
- GlobalExceptionHandler: 新增 NoResourceFoundException → code=100「请求的接口不存在: {url}」
  （原先落兜底分支返回 500，把「URL 写错」误报成「服务端炸了」；沿用 100 而不新增 404 码，
  因 PROJECT_CONTEXT 第 5 章封版错误码表无 404，且规定业务接口一律 HTTP 200 + body.code）
- 新增 GlobalExceptionHandlerNoResourceFoundTest(4)